<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="main_terms">Terms</string>
    <string name="main_courses">Courses</string>
    <string name="main_assessments">Assessments</string>
    <string name="main_mentors">Mentors</string>

    <string name="edit_button">Edit</string>

    <string name="add_term">Add Term</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="add_course">Add Course</string>

    <!-- Fillers for hardcorded strings -->
    <string name="filler_begins">Begins :\u0020</string>
    <string name="filler_ending">"Ending :\u0020</string>
    <string name="filler_date">08/30/2020</string>
    <string name="filler_assessment_date">Mon Aug 31 2020</string>
    <string name="filler_title">Title</string>
    <string name="filler_num_courses">0 Courses</string>
    <string name="filler_num_assessments">0 Assessments</string>

    <string name="filler_course_title">Course Title</string>
    <string name="filler_label_course_status">Status :\u0020</string>
    <string name="filler_course_status">Completed</string>


    <string name="filler_assessment_title">Assessment Title</string>

    <string name="filler_assessment_due">Due :\u0020</string>
    <string name="filler_assessment_type">Objective</string>
    <string name="filler_label_assessment_type">Type :\u0020</string>
    <string name="cancel">Cancel</string>
    <string name="save_item">Save Item</string>
    <string name="filler_start">Start :\u0020</string>
    <string name="filler_anticipated_end">Anticipated End :\u0020</string>
    <string name="spinner_select_course_status">Select Status</string>

    <string name="label_spinner_term">"Term : "</string>
    <string name="label_notes">"Notes :  "</string>
    <string name="label_due_date">"Due Date : "</string>
    <string name="label_assessment_type">"Type : "</string>
    <string name="label_spinner_course">"Course : "</string>

    <string name="label_mentor_name">"Name : "</string>
    <string name="label_mentor_phone">"Phone : "</string>
    <string name="label_mentor_email">"Email : "</string>
    <string name="course_notes">Course Notes</string>
    <string name="share_button">Share</string>
    <string name="channel_name">Date Notifications</string>
    <string name="channel_description">Notifications of important dates</string>
    <string name="due_notify">Set Due Date Notification</string>
    <string name="start_notify">Set Start Date Notification</string>
    <string name="end_notify">Set End Date Notification</string>
    <string name="delete">Delete</string>
    <string name="mentor">Course Mentor</string>

</resources>