<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:contentDescription="@string/edit_button"
        android:paddingStart="17dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="17dp"
        android:src="@drawable/ic_twotone_edit_24" />

    <ImageView
        android:id="@+id/iv_start_notify"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/start_notify"
        android:paddingStart="13dp"
        android:paddingEnd="12dp"
        android:paddingTop="7dp"
        android:paddingBottom="18dp"
        android:layout_marginStart="155dp"
        android:src="@drawable/ic_baseline_access_alarm_24" />

    <ImageView
        android:id="@+id/iv_end_notify"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/end_notify"
        android:paddingStart="13dp"
        android:paddingEnd="12dp"
        android:paddingTop="7dp"
        android:paddingBottom="18dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_access_alarm_24" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filler_start"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_course_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filler_date"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/filler_anticipated_end"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_course_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filler_date"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_date"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/main_courses"
                app:srcCompat="@drawable/ic_courses_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_view_course_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/filler_course_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_view_number_assessments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/filler_num_assessments"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_below="@id/title_section"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/label_course_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/filler_label_course_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/course_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/filler_course_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondary"
                android:textStyle="bold"/>



        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>