<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:contentDescription="@string/edit_button"
        android:paddingStart="17dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="17dp"
        android:src="@drawable/ic_twotone_edit_24" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="111dp"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/top_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filler_assessment_due"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_assessment_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/filler_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_row"
            android:layout_below="@id/top_row"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/main_assessments"
                app:srcCompat="@drawable/ic_assessment_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_view_assessment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/filler_assessment_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_label_assessment_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/filler_label_assessment_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_assessment_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/filler_assessment_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondary" />


        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>