<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".course.main.CourseMainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorNeutralLightGray">

    <androidx.cardview.widget.CardView
        android:id="@+id/term_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/edit_term_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:contentDescription="@string/edit_button"
            android:paddingStart="17dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="17dp"
            android:src="@drawable/ic_twotone_edit_24" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="111dp"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filler_begins"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/filler_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/end_date"
                android:layout_below="@id/start_date"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/main_terms"
                    android:src="@drawable/ic_terms_24"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/filler_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_view_number_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/filler_num_courses"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/filler_ending"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/filler_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/courses_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/main_courses"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_below="@id/term_details"
            android:background="@color/colorSecondary"
            android:textColor="@android:color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/course_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/course_item"
            android:layout_below="@id/courses_label"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:tint="@android:color/white"
        android:contentDescription="@string/add_course" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>